--- a/application/routes/users/templates/change_password.html
+++ b/application/routes/users/templates/change_password.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <title>Change Password Template</title>
+    <title>Reset Password Email Template</title>
     <meta name="description" content="Reset Password Email Template." />
     <style type="text/css"></style>
   </head>
@@ -98,22 +98,48 @@
                         To reset your password, click the following link and
                         follow the instructions.
                       </p>
-                      <a
-                        href="https://{{url}}/resetpassword?access_token={{token}}"
-                        style="
-                          background: #e5b079;
-                          text-decoration: none !important;
-                          font-weight: 500;
-                          margin-top: 35px;
-                          color: #fff;
-                          text-transform: uppercase;
-                          font-size: 14px;
-                          padding: 10px 24px;
-                          display: inline-block;
-                          border-radius: 50px;
-                        "
-                        >Reset Password</a
+
+                      <table
+                        border="0"
+                        cellpadding="0"
+                        cellspacing="0"
+                        align="center"
+                        style="margin-top: 8px"
                       >
+                        <tr tyle="padding: 0; ">
+                          <td
+                            style="
+                              padding: 8px;
+                              background-color: #cba06c;
+                              cursor: pointer;
+                              border-radius: 4px;
+                              color: #1e1e2d;
+                              text-decoration: none;
+                              font-size: 12px;
+                              font-weight: bold;
+                              text-transform: capitalize;
+                              line-height: 1;
+                              text-align: center;
+                            "
+                          >
+                            <a
+                              href="{url}"
+                              target="_blank"
+                              style="
+                                display: inline-block;
+                                color: #1e1e2d;
+                                text-decoration: none;
+                                font-size: 14px;
+                                font-weight: bold;
+                                text-transform: capitalize;
+                              "
+                              title="Reset Password"
+                            >
+                              RESET PASSWORD
+                            </a>
+                          </td>
+                        </tr>
+                      </table>
                     </td>
                   </tr>
                   <tr>
