fix: change emails to use jinja templating and fix delete user endpoint

--- a/application/routes/users/templates/activate_user.html
+++ b/application/routes/users/templates/activate_user.html
@@ -62,7 +62,7 @@ text-transform: capitalize;
 line-height: 1;
 text-align: center;
 ">
-                          <a href="{url}" target="_blank" style="
+                          <a href="{{url}}" target="_blank" style="
 display: inline-block;
 color: #1e1e2d;
 text-decoration: none;
@@ -86,7 +86,7 @@ text-transform: capitalize;
                 </tr>
                 <tr>
                   <td style="height:40px;">
-                    <img height="160" width="160" src="data:image/png;base64, {qrcode_image}" alt="QR Code" />
+                    <img height="160" width="160" src="data:image/png;base64, {{qrcode_image}}" alt="QR Code" />
                   </td>
                 </tr>
               </table>
