--- a/application/routes/users/templates/reset_password.html
+++ b/application/routes/users/templates/reset_password.html
@@ -123,7 +123,7 @@
                             "
                           >
                             <a
-                              href="{url}"
+                              href="{{url}}"
                               target="_blank"
                               style="
                                 display: inline-block;
