style: change the email template txt

--- a/application/routes/users/templates/activate_user.html
+++ b/application/routes/users/templates/activate_user.html
@@ -41,9 +41,14 @@
                     <span
                       style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
                     <p style="color:#455056; font-size:15px;line-height:24px; margin:0;">
-                      A Claxon Business Solution Budgeting system account have been created for
-                      you. Please click the link below to activate and sign into your
-                      account. Contact info@claxonactuaries.com for further information<br><br>
+                 
+                      A Claxon Business Solution Budgeting System account has been created for you.
+                      Please scan the QR code with an Authenticator app to set
+                      up 2FA and Reset your password to start using the
+                      system.
+                      <br>
+                      Contact info@claxonactuaries.com for further information
+                      <br>
 
                     </p>
 
