--- a/application/routes/users/templates/reset_password.html
+++ b/application/routes/users/templates/reset_password.html
@@ -93,10 +93,10 @@
                           margin: 0;
                         "
                       >
-                        We cannot simply send you your old password. A unique
-                        link to reset your password has been generated for you.
-                        To reset your password, click the following link and
-                        follow the instructions.
+                        You recently requested a password reset for your Claxon
+                        IFRS 9 account. Click the button below to reset your
+                        password. Your password won't change until you create a
+                        new one.
                       </p>
 
                       <table
@@ -104,7 +104,7 @@
                         cellpadding="0"
                         cellspacing="0"
                         align="center"
-                        style="margin-top: 8px"
+                        style="margin-top: 12px"
                       >
                         <tr tyle="padding: 0; ">
                           <td
