--- a/application/routes/users/templates/activate_user.html
+++ b/application/routes/users/templates/activate_user.html
@@ -62,12 +62,13 @@ border-radius: 4px;
 color: #1e1e2d;
 text-decoration: none;
 font-size: 12px;
+margin-top: 16px; 
 font-weight: bold;
 text-transform: capitalize;
 line-height: 1;
 text-align: center;
 ">
-                          <a href="{{url}}" target="_blank" style="
+                   <a href="{{url}}" target="_blank" style="
 display: inline-block;
 color: #1e1e2d;
 text-decoration: none;
