--- a/application/routes/users/templates/activate_user.html
+++ b/application/routes/users/templates/activate_user.html
@@ -1,117 +1,137 @@
 <!DOCTYPE html>
 <html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Account Activation</title>
+    <style>
+      body,
+      table,
+      td {
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+      }
+      a:visited {
+        color: #1e1e2d;
+      }
+    </style>
+  </head>
+  <body
+    style="
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      background-color: #f2f3f8;
+      margin: 0;
+      padding: 0;
+    "
+  >
+    <table
+      border="0"
+      cellpadding="0"
+      cellspacing="0"
+      max-width="670"
+      align="center"
+    >
+      <tr>
+        <td align="center" style="padding: 40px 35px">
+          <table
+            border="0"
+            cellpadding="0"
+            cellspacing="0"
+            style="
+              width: 100%;
+              max-width: 670px;
+              background: #fff;
+              border-radius: 3px;
+              box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
+            "
+          >
+            <tr>
+              <td style="padding: 20px">
+                <h3
+                  style="
+                    color: #1e1e2d;
+                    font-weight: 500;
+                    font-size: 32px;
+                    margin: 0;
+                  "
+                >
+                  Account Activation
+                </h3>
+                <hr width="50%" align="left" />
+                <table
+                  border="0"
+                  cellpadding="0"
+                  cellspacing="0"
+                  style="width: 100%"
+                >
+                  <tr>
+                    <td width="167" style="padding: 0; vertical-align: top">
+                      <img
+                        height="160"
+                        width="160"
+                        src="data:image/jpeg;base64, {{qrcode_image}}"
+                        alt="QR Code"
+                      />
+                    </td>
+                    <td width="520" style="padding: 0; vertical-align: top">
+                      <p
+                        style="
+                          color: #455056;
+                          font-size: 15px;
+                          line-height: 24px;
+                          margin-top: 12px;
+                        "
+                      >
+                        A Claxon Bugdeting System account has been created for
+                        you. Please scan the QR code with an Authenticator app
+                        to set up 2FA and Reset your password to start using the
+                        system.
+                      </p>
 
-<head>
-  <meta charset="utf-8">
-  <title>Reset Password Email Template</title>
-  <meta name="description" content="Reset Password Email Template.">
-  <style type="text/css">
-
-  </style>
-</head>
-
-<body style="margin: 0px; background-color: #f2f3f8;">
-  <table cellspacing="0" border="0" cellpadding="0" width="100%" bgcolor="#f2f3f8"
-    style="@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700); font-family: 'Open Sans', sans-serif;">
-    <tr>
-      <td>
-        <table style="background-color: #f2f3f8; max-width:670px; margin:0 auto;" width="100%" border="0" align="center"
-          cellpadding="0" cellspacing="0">
-          <tr>
-            <td style="height:80px;">&nbsp;</td>
-          </tr>
-          <tr>
-            <td style="text-align:center;">
-            </td>
-          </tr>
-          <tr>
-            <td style="height:20px;">&nbsp;</td>
-          </tr>
-          <tr>
-            <td>
-              <table width="95%" border="0" align="center" cellpadding="0" cellspacing="0"
-                style="max-width:670px;background:#fff; border-radius:3px; text-align:center;-webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);-moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);box-shadow:0 6px 18px 0 rgba(0,0,0,.06);">
-                <tr>
-                  <td style="height:40px;">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td style="padding:0 35px;">
-                    <h3 style="color:#1e1e2d; font-weight:500; margin:0;font-size:32px;font-family:'Rubik',sans-serif;">
-                      Budgeting System Account Activation</h3>
-                    <span
-                      style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
-                    <p style="color:#455056; font-size:15px;line-height:24px; margin:0;">
-                 
-                      A Claxon Business Solution Budgeting System account has been created for you.
-                      Please scan the QR code with an Authenticator app to set
-                      up 2FA and Reset your password to start using the
-                      system.
-                      <br>
-                      Contact info@claxonactuaries.com for further information
-                      <br>
-
-                    </p>
-
-                    <table border="0" cellpadding="0" cellspacing="0" align="center" style="margin-top: 8px">
-                      <tr tyle="padding: 0; ">
-                        <td style="
-padding: 8px;
-background-color: #cba06c;
-cursor: pointer;
-border-radius: 4px;
-color: #1e1e2d;
-text-decoration: none;
-font-size: 12px;
-margin-top: 16px; 
-font-weight: bold;
-text-transform: capitalize;
-line-height: 1;
-text-align: center;
-">
-                   <a href="{{url}}" target="_blank" style="
-display: inline-block;
-color: #1e1e2d;
-text-decoration: none;
-font-size: 14px;
-font-weight: bold;
-text-transform: capitalize;
-" title="Reset Password">
-                            RESET PASSWORD
-                          </a>
-
-
-                        </td>
-                      </tr>
-                    </table>
-
-                    <b>
-
-
-
-                  </td>
-                </tr>
-                <tr>
-                  <td style="height:40px;">
-                    <img height="160" width="160" src="data:image/png;base64, {{qrcode_image}}" alt="QR Code" />
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td style="height:20px;">&nbsp;</td>
-          </tr>
-          <tr>
-            <td style="text-align:center;">
-            </td>
-          </tr>
-          <tr>
-            <td style="height:80px;">&nbsp;</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-</body>
-
+                      <table border="0" cellpadding="0" cellspacing="0">
+                        <tr tyle="padding: 0; ">
+                          <td
+                            style="
+                              padding: 8px;
+                              background-color: #cba06c;
+                              cursor: pointer;
+                              border-radius: 4px;
+                              color: #1e1e2d;
+                              text-decoration: none;
+                              font-size: 12px;
+                              font-weight: bold;
+                              text-transform: capitalize;
+                              line-height: 1;
+                              text-align: center;
+                            "
+                          >
+                            <a
+                              href="{{ url }}"
+                              target="_blank"
+                              style="
+                                display: inline-block;
+                                color: #1e1e2d;
+                                text-decoration: none;
+                                font-size: 14px;
+                                font-weight: bold;
+                                text-transform: capitalize;
+                              "
+                              title="Reset Password"
+                            >
+                              RESET PASSWORD
+                            </a>
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+                <hr width="50%" align="left" />
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
