--- a/application/routes/users/templates/reset_password.html
+++ b/application/routes/users/templates/reset_password.html
@@ -1,163 +1,125 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <title>Reset Password Email Template</title>
-    <meta name="description" content="Reset Password Email Template." />
-    <style type="text/css"></style>
+    <meta charset="UTF-8" />
+    <title>Reset Password</title>
+    <style>
+      body,
+      table,
+      td {
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+      }
+      a:visited {
+        color: #1e1e2d;
+      }
+    </style>
   </head>
 
   <body
-    marginheight="0"
-    topmargin="0"
-    marginwidth="0"
-    style="margin: 0px; background-color: #f2f3f8"
-    leftmargin="0"
+    style="
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      background-color: #f2f3f8;
+      margin: 0 auto;
+      padding: 0;
+    "
   >
     <table
-      cellspacing="0"
       border="0"
       cellpadding="0"
-      width="100%"
-      bgcolor="#f2f3f8"
-      style="
-        @import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700|Open+Sans:300,400,600,700);
-        font-family: 'Open Sans', sans-serif;
-      "
+      cellspacing="0"
+      max-width="670"
+      align="center"
     >
       <tr>
-        <td>
+        <td align="center" style="padding: 40px 35px">
           <table
-            style="background-color: #f2f3f8; max-width: 670px; margin: 0 auto"
-            width="100%"
             border="0"
-            align="center"
             cellpadding="0"
             cellspacing="0"
+            style="
+              width: 600px;
+              background: #fff;
+              border-radius: 3px;
+              box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
+            "
           >
-            <tr>
-              <td style="height: 80px">&nbsp;</td>
-            </tr>
-
-            <tr>
-              <td style="height: 20px">&nbsp;</td>
-            </tr>
-            <tr>
-              <td>
-                <table
-                  width="95%"
-                  border="0"
-                  align="center"
-                  cellpadding="0"
-                  cellspacing="0"
-                  style="
-                    max-width: 670px;
-                    background: #fff;
-                    border-radius: 3px;
-                    text-align: center;
-                    -webkit-box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
-                    -moz-box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
-                    box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
-                  "
-                >
-                  <tr>
-                    <td style="height: 40px">&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td style="padding: 0 35px">
-                      <h1
-                        style="
-                          color: #1e1e2d;
-                          font-weight: 500;
-                          margin: 0;
-                          font-size: 32px;
-                          font-family: 'Rubik', sans-serif;
-                        "
-                      >
-                        You have requested to reset your password
-                      </h1>
-                      <span
-                        style="
-                          display: inline-block;
-                          vertical-align: middle;
-                          margin: 29px 0 26px;
-                          border-bottom: 1px solid #cecece;
-                          width: 100px;
-                        "
-                      ></span>
-                      <p
-                        style="
-                          color: #455056;
-                          font-size: 15px;
-                          line-height: 24px;
-                          margin: 0;
-                        "
-                      >
-                        You recently requested a password reset for your Claxon
-                        IFRS 9 account. Click the button below to reset your
-                        password. Your password won't change until you create a
-                        new one.
-                      </p>
-
-                      <table
-                        border="0"
-                        cellpadding="0"
-                        cellspacing="0"
-                        align="center"
-                        style="margin-top: 12px"
-                      >
-                        <tr tyle="padding: 0; ">
-                          <td
-                            style="
-                              padding: 8px;
-                              background-color: #cba06c;
-                              cursor: pointer;
-                              border-radius: 4px;
-                              color: #1e1e2d;
-                              text-decoration: none;
-                              font-size: 12px;
-                              font-weight: bold;
-                              text-transform: capitalize;
-                              line-height: 1;
-                              text-align: center;
-                            "
-                          >
-                            <a
-                              href="{{url}}"
-                              target="_blank"
-                              style="
-                                display: inline-block;
-                                color: #1e1e2d;
-                                text-decoration: none;
-                                font-size: 14px;
-                                font-weight: bold;
-                                text-transform: capitalize;
-                              "
-                              title="Reset Password"
-                            >
-                              RESET PASSWORD
-                            </a>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="height: 40px">&nbsp;</td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-
-            <tr>
-              <td style="height: 20px">&nbsp;</td>
-            </tr>
-            <tr>
-              <td style="text-align: center"></td>
-            </tr>
-            <tr>
-              <td style="height: 80px">&nbsp;</td>
-            </tr>
+            <td style="padding: 20px">
+              <h3
+                style="
+                  color: #1e1e2d;
+                  font-weight: 500;
+                  margin: 0;
+                  font-size: 32px;
+                "
+              >
+                Reset Password
+              </h3>
+              <hr width="50%" align="left" />
+              <p
+                style="
+                  color: #455056;
+                  font-size: 15px;
+                  line-height: 24px;
+                  margin-top: 0;
+                  margin-bottom: 8px;
+                "
+              >
+                You recently requested a password reset for your Claxon
+                Budgeting System Account. Click the button below to change your
+                password.
+              </p>
+              <table border="0" cellpadding="0" cellspacing="0">
+                <tr>
+                  <td
+                    align="center"
+                    style="
+                      padding: 8px;
+                      background-color: #cba06c;
+                      cursor: pointer;
+                      border-radius: 4px;
+                      color: #1e1e2d;
+                      text-decoration: none;
+                      font-size: 14px;
+                      font-weight: bold;
+                      text-transform: capitalize;
+                      line-height: 1;
+                      text-align: center;
+                    "
+                  >
+                    <a
+                      href="{{url}}"
+                      target="_blank"
+                      style="
+                        display: inline-block;
+                        color: #1e1e2d;
+                        text-decoration: none;
+                        font-size: 14px;
+                        font-weight: bold;
+                        text-transform: capitalize;
+                        line-height: 1;
+                      "
+                    >
+                      RESET PASSWORD
+                    </a>
+                  </td>
+                </tr>
+              </table>
+              <p
+                style="
+                  color: #455056;
+                  font-size: 15px;
+                  line-height: 24px;
+                  margin-top: 8px;
+                  margin-bottom: 4px;
+                "
+              >
+                If you did not request to reset your password, disregard this
+                email.
+              </p>
+              <hr width="50%" align="left" />
+            </td>
           </table>
         </td>
       </tr>
