fix: update active user email

--- a/application/routes/users/templates/activate_user.html
+++ b/application/routes/users/templates/activate_user.html
@@ -118,7 +118,7 @@
                               "
                               title="Reset Password"
                             >
-                              RESET PASSWORD
+                              SET PASSWORD
                             </a>
                           </td>
                         </tr>
